Lodging: Mobile card styling - spacing & font fixed.

--- a/styles/base.css
+++ b/styles/base.css
@@ -460,6 +460,11 @@ strong {
 .line-h-1 {
     line-height: 1rem !important;
 }
+/* letter spacing */
+.l-s-l-h {
+    letter-spacing: 0.04rem;
+    line-height: 19.6px;
+}
 
 /* font size */
 .text-base {
